Feature: Allow Critters to be magic users or technomancers (#97)

--- a/templates/parts/npc_edit_grunt.html
+++ b/templates/parts/npc_edit_grunt.html
@@ -1,10 +1,10 @@
-<div style="flex:3">
+{{!-- <div style="flex:3"> --}}
 
 	<!-- TODO implement grunt rules -->
 	<!-- <input name="isGrunt" id="grunt_isgrunt" name="gruntrules" type="checkbox" value="{{system.gruntrules}}" />
 	<label for="grunt_isgrunt">{{localize 'shadowrun6.npc.gruntrules' }}</label> -->
 
-</div>
+{{!-- </div> --}}
 <div style="flex:5">
 
 	<label for="grunt_mortype">{{localize 'shadowrun6.npc.mortype'}}:</label>
