--- a/templates/parts/section-focus.html
+++ b/templates/parts/section-focus.html
@@ -1,27 +1,27 @@
-<div class="section" style="display: inline-block; width:100%; min-width: 380px;">
+<div class="section" style="display: inline-block; min-width: 380px;">
 	<div class="section-head">
 		<h2 class="section-title">{{ localize 'shadowrun6.section.focus.title' }}</h2>
-		<a class="item-control focus-create" title="{{localize 'shadowrun6.section.focus.add' }}">
-			<h2 class="fas fa-plus"></h2>
-		</a>
+		<a class="item-control focus-create" title="{{localize 'shadowrun6.section.focus.add' }}"><h2 class="fas fa-plus"></h2></a>
 	</div>
 	<table>
 		<thead>
 			<tr>
-				<th style="text-align:left; width: 65%;">{{ localize 'shadowrun6.label.column.name' }}</th>
-				<th style="width: 20%;">{{ localize 'shadowrun6.section.focus.column.rating' }}</th>
-				<th>{{ localize 'shadowrun6.label.column.action' }}</th>
+				<th style="text-align:left;">{{ localize 'shadowrun6.label.column.name' }}</th>
+				<th style="width: 15%;">{{ localize 'shadowrun6.section.focus.column.rating' }}</th>
+				<th style="width: 5%;">{{ localize 'shadowrun6.label.column.action' }}</th>
 			</tr>
 		</thead>
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'focus'}}
 		<tr class="item list-item" data-item-id="{{item.id}}">
 			<td><input name="focusName{{id}}" class="draggable" data-uuid="{{item.uuid}}" type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
-			<td class="centered" style="width: 2em"> <input name="focusRating{{id}}" class="centered" type="text"
-					value="{{item.system.rating}}" data-field="system.rating" data-type="Number" disabled></td>
-			<td class="centered"><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
-						class="fas fa-edit"></i></a> <a class="item-control item-delete" title='{{localize '
-					shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
+			<td class="centered" style="width: 2em">
+				<input name="focusRating{{id}}" class="centered" type="text" value="{{item.system.rating}}" data-field="system.rating" data-type="Number" disabled>
+			</td>
+			<td class="centered">
+				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
+				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
+			</td>
 		</tr>
 		{{/iff}}
 		{{/each}}
