--- a/templates/parts/section-martialart.html
+++ b/templates/parts/section-martialart.html
@@ -10,25 +10,25 @@
     {{#iff item.type '==' 'martialartstyle'}}
 		{{log "genesisID" item.system.genesisID}}
 		<tr class="item list-item" data-item-id="{{item.id}}" data-style-id="{{item.system.genesisID}}">
-			<td style="width: 85%" colspan="2"> <div class="section-head"><input name="martialArtName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}"/>
-			</div></td>
-			<td style="width: 15%">
+			<td style="width: 85%" colspan="2">
+				<div>{{item.name}}</div>
+			</td>
+			<td style="width: 15%; text-align: right">
+				<a class="item-control martialart-tech-create" title="{{localize 'shadowrun6.section.martialarts.tech_add' }}"><i class="fas fa-plus"></i></a>
 				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
-				 <a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
-				 <a class="item-control martialart-tech-create" title="{{localize 'shadowrun6.section.martialarts.tech_add' }}">
-					<i class="fas fa-plus"></i>
-				</a>
-				</td>
+				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
+			</td>
 	   </tr>
 		{{#each actor.items as |subitem idx|}}
 		{{#iff subitem.type '==' 'martialarttech'}}
 		{{#iff subitem.system.style '==' item.system.genesisID}}
 		<tr class="item list-item" data-item-id="{{subitem.id}}">
-			<td style="width: 60%"><input name="martialArtDescription{{id}}" style="font-weight: normal; padding-left: 10px" type="text" value="{{subitem.name}}" data-field="name" title="{{subitem.system.description}}"/></td>
-			<td style="width: 25%"><input name="martialArtChoice{{id}}" type="text" value="{{subitem.system.choice}}" data-field="system.choice" class="secondary" placeholder="?"/></td>
-			<td><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
-					class="fas fa-edit"></i></a> <a class="item-control item-delete"
-				title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
+			<td style="width: 60%; padding-left: 14px;">{{subitem.name}}</td>
+			<td style="width: 25%">{{subitem.system.choice}}</td>
+			<td style="width: 15%; text-align: right">
+				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
+				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
+			</td>
 	   </tr>
 	   {{/iff}}
 		{{/iff}}
