Add Editor field to Items

--- a/templates/item/shadowrun6-contact-sheet.html
+++ b/templates/item/shadowrun6-contact-sheet.html
@@ -19,7 +19,7 @@
                 </tr>
             </table>
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea name="description" class="box" type="text" data-field="system.description" cols="50" rows="8">{{item.system.description}}</textarea>
+            {{addEditor owner editable "description"}}
         </div>
     </section>
 </form>
