--- a/templates/item/shadowrun6-focus-sheet.html
+++ b/templates/item/shadowrun6-focus-sheet.html
@@ -18,7 +18,7 @@
             </table>
 
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea class="box" type="text" data-field="system.description" cols="20" rows="6">{{system.description}}</textarea>
+            {{addEditor owner editable "description"}}
         </div>
     </section>
 </form>
