--- a/templates/item/shadowrun6-software-sheet.html
+++ b/templates/item/shadowrun6-software-sheet.html
@@ -38,7 +38,7 @@
             </table>
         <div class="section">
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea class="box" type="text" data-field="system.description" cols="60" rows="6">{{item.system.description}}</textarea>
+            {{addEditor owner editable "description"}}
         </div>
     </section>
 </form>
