--- a/templates/item/shadowrun6-critterpower-sheet.html
+++ b/templates/item/shadowrun6-critterpower-sheet.html
@@ -34,7 +34,7 @@
                 </td>
             </table>
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea name="description" class="box" type="text" data-field="system.description" cols="20" rows="8">{{item.system.description}}</textarea>
+            {{addEditor owner editable "description"}}
         </div>
     </section>
 </form>
