--- a/templates/item/shadowrun6-echo-sheet.html
+++ b/templates/item/shadowrun6-echo-sheet.html
@@ -9,7 +9,7 @@
                 rows="8">{{item.system.explain}}</textarea>
 
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea name="description" class="box" type="text" data-field="system.description" cols="50" rows="8">{{item.system.description}}</textarea>
+            {{addEditor owner editable "description"}}
         </div>
     </section>
 </form>
