--- a/templates/item/shadowrun6-martialartstyle-sheet.html
+++ b/templates/item/shadowrun6-martialartstyle-sheet.html
@@ -29,7 +29,7 @@
                     </td>
             </table>
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea name="description" class="box" type="text" data-field="system.description" cols="20" rows="6">{{item.system.description}}</textarea>
+            {{addEditor owner editable "description"}}
         </div>
     </section>
 </form>
