--- a/templates/item/shadowrun6-quality-sheet.html
+++ b/templates/item/shadowrun6-quality-sheet.html
@@ -7,9 +7,9 @@
         <dl>
             <dt>{{localize 'shadowrun6.qualityedit.explain'}}</dt>
             <dd><input name="explain" type="text" value="{{item.system.explain}}" data-field="system.explain" style="border: 1px solid var(--color-border-dark);" placeholder="{{localize 'shadowrun6.label.details'}}" /></dd>
-            <dt>{{localize 'shadowrun6.qualityedit.description'}}:</dt>
-            <dd>
-                <textarea name="description" type="text" data-field="system.description" class="secondary" cols="20" rows="6">{{item.system.description}}</textarea>
+            <dt>{{localize 'shadowrun6.qualityedit.description'}}</dt>
+            <dd class="specialDescription">
+                {{addEditor owner editable "description"}}
            </dd>
             <dt>{{localize 'shadowrun6.qualityedit.category'}}</dt>
             <dd>
