--- a/templates/item/shadowrun6-ritual-sheet.html
+++ b/templates/item/shadowrun6-ritual-sheet.html
@@ -34,7 +34,7 @@
                         </table>
 
                         <h3>{{localize 'shadowrun6.item.description'}}</h3>
-                        <textarea name="description" class="box" type="text" data-field="system.description" cols="20" rows="6">{{item.system.description}}</textarea>
+                        {{addEditor owner editable "description"}}
 
                 </div>
         </section>
