--- a/templates/item/shadowrun6-martialarttech-sheet.html
+++ b/templates/item/shadowrun6-martialarttech-sheet.html
@@ -5,7 +5,7 @@
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" style="background-color: var(--highlight-color)"/>
         <div class="section">
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            {{addEditor owner editable "description"}}
+            {{editor item.system.description target="system.description" button=true owner=owner editable=editable engine="prosemirror"}}
         </div>
     </section>
 </form>
