--- a/templates/item/shadowrun6-quality-sheet.html
+++ b/templates/item/shadowrun6-quality-sheet.html
@@ -9,7 +9,7 @@
             <dd><input name="explain" type="text" value="{{item.system.explain}}" data-field="system.explain" style="border: 1px solid var(--color-border-dark);" placeholder="{{localize 'shadowrun6.label.details'}}" /></dd>
             <dt>{{localize 'shadowrun6.qualityedit.description'}}</dt>
             <dd class="specialDescription">
-                {{addEditor owner editable "description"}}
+            {{editor item.system.description target="system.description" button=true owner=owner editable=editable engine="prosemirror"}}
            </dd>
             <dt>{{localize 'shadowrun6.qualityedit.category'}}</dt>
             <dd>
