--- a/templates/item/shadowrun6-software-sheet.html
+++ b/templates/item/shadowrun6-software-sheet.html
@@ -38,7 +38,7 @@
             </table>
         <div class="section">
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            {{addEditor owner editable "description"}}
+            {{editor item.system.description target="system.description" button=true owner=owner editable=editable engine="prosemirror"}}
         </div>
     </section>
 </form>
