--- a/templates/item/shadowrun6-spell-sheet.html
+++ b/templates/item/shadowrun6-spell-sheet.html
@@ -77,7 +77,7 @@
                 </tr>
             </table>
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            {{addEditor owner editable "description"}}
+            {{editor item.system.description target="system.description" button=true owner=owner editable=editable engine="prosemirror"}}
         </div>
     </section>
 </form>
