--- a/templates/parts/section-weapons.html
+++ b/templates/parts/section-weapons.html
@@ -15,7 +15,7 @@
                 <label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label>
             </td>
             <td style="width: 10%"><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
-            <td style="width: 15%"><label class="middle-column" >{{attackrating item.system.attackRating}}</label></td>
+            <td style="width: 15%"><label class="middle-column" >{{attackrating item.calculated.attackRating}}</label></td>
             <td style="width: 15%; text-align: right; vertical-align: middle; white-space: nowrap;">
                 <input name="weaponAmmocount{{id}}" type="text" value="{{item.system.ammocount}}" data-field="system.ammocount" style="width: 1.5em; text-align: right; padding: 0;"/>/{{item.system.ammocap}}
                 {{!-- TODO add ammo reload --}}
