Bugfix item layout caused by Description editor field #109

--- a/templates/item/shadowrun6-critterpower-sheet.html
+++ b/templates/item/shadowrun6-critterpower-sheet.html
@@ -1,7 +1,8 @@
+{{> "systems/shadowrun6-eden/templates/item/item-sheet-header.hbs" }}
+
 <form class="flexcol {{cssClass}}" autocomplete="off">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
         <div class="section">
             <table>
                 <tr>
