--- a/templates/parts/section-weapons.html
+++ b/templates/parts/section-weapons.html
@@ -37,8 +37,8 @@
                     <table>
                         <tr>
                             <td>
-                                {{ localize 'shadowrun6.label.modifications' }} 
-                                <textarea class="box" type="text" data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 100%">{{item.system.accessories}}</textarea>
+                                <label>{{ localize 'shadowrun6.label.accessories' }}</label>
+                                <div class="sheet-editor-readonly">{{{item.system.accessories}}}</div>
                             </td>
                         </tr>
                         <tr>
@@ -97,8 +97,8 @@
                     <table>
                         <tr>
                             <td>
-                                {{ localize 'shadowrun6.label.modifications' }} 
-                                <textarea class="box" type="text" data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 100%" rows="2">{{item.system.accessories}}</textarea>
+                                <label>{{ localize 'shadowrun6.label.accessories' }}</label>
+                                <div class="sheet-editor-readonly">{{{item.system.accessories}}}</div>
                             </td>
                         </tr>
                         <tr>
@@ -168,8 +168,8 @@
                     <table>
                         <tr>
                             <td>
-                                {{ localize 'shadowrun6.label.modifications' }} 
-                                <textarea class="box" type="text" data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 100%" rows="2">{{item.system.accessories}}</textarea>
+                                <label>{{ localize 'shadowrun6.label.accessories' }}</label>
+                                <div class="sheet-editor-readonly">{{{item.system.accessories}}}</div>
                             </td>
                         </tr>
                         <tr>
