--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -1,9 +1,8 @@
+{{> "systems/shadowrun6-eden/templates/item/item-sheet-header.hbs" }}
+
 <form class="flexcol {{cssClass}}" autocomplete="off" style="min-width: 605px; min-width: fit-content;">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
-        <img src="{{item.img}}" data-edit="img" title="{{item.name}}"
-            style="background-color: var(--color-light-2);" />
         <div class="section">
             <table>
                 <tr>
