--- a/templates/item/shadowrun6-martialarttech-sheet.html
+++ b/templates/item/shadowrun6-martialarttech-sheet.html
@@ -1,8 +1,8 @@
+{{> "systems/shadowrun6-eden/templates/item/item-sheet-header.hbs" }}
+
 <form class="flexcol {{cssClass}}" autocomplete="off">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input name="name" type="text" value="{{item.name}}" data-field="name"/></h2>
-        <img src="{{item.img}}" data-edit="img" title="{{item.name}}" style="background-color: var(--highlight-color)"/>
         <div class="section">
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
             {{editor item.system.description target="system.description" button=true owner=owner editable=editable engine="prosemirror"}}
