--- a/templates/item/shadowrun6-quality-sheet.html
+++ b/templates/item/shadowrun6-quality-sheet.html
@@ -1,21 +1,22 @@
+{{> "systems/shadowrun6-eden/templates/item/item-sheet-header.hbs" }}
+
 <form class="flexcol {{cssClass}}" autocomplete="off">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
-        <img src="{{item.img}}" data-edit="img" title="{{item.name}}" style="background-color: var(--highlight-color)"/>
         <div class="section">
-        <dl>
-            <dt>{{localize 'shadowrun6.qualityedit.explain'}}</dt>
-            <dd><input name="explain" type="text" value="{{item.system.explain}}" data-field="system.explain" style="border: 1px solid var(--color-border-dark);" placeholder="{{localize 'shadowrun6.label.details'}}" /></dd>
-            <dt>{{localize 'shadowrun6.qualityedit.description'}}</dt>
-            <dd class="specialDescription">
-            {{editor item.system.description target="system.description" button=true owner=owner editable=editable engine="prosemirror"}}
-           </dd>
-            <dt>{{localize 'shadowrun6.qualityedit.category'}}</dt>
-            <dd>
-                <select name="qualityCategory" data-field="system.category">
-                    {{selectOptions config.QUALITY_CATEGORIES selected=item.system.category localize=true}}
-              </select></dd>
-        </dl>
+            <dl>
+                <dt>{{localize 'shadowrun6.qualityedit.explain'}}</dt>
+                <dd><input name="explain" type="text" value="{{item.system.explain}}" data-field="system.explain" style="border: 1px solid var(--color-border-dark);" placeholder="{{localize 'shadowrun6.label.details'}}" /></dd>
+                <dt>{{localize 'shadowrun6.qualityedit.description'}}</dt>
+                <dd class="specialDescription">
+                {{editor item.system.description target="system.description" button=true owner=owner editable=editable engine="prosemirror"}}
+            </dd>
+                <dt>{{localize 'shadowrun6.qualityedit.category'}}</dt>
+                <dd>
+                    <select name="qualityCategory" data-field="system.category">
+                        {{selectOptions config.QUALITY_CATEGORIES selected=item.system.category localize=true}}
+                </select></dd>
+            </dl>
+        </div>
     </section>
 </form>
