--- a/templates/item/shadowrun6-software-sheet.html
+++ b/templates/item/shadowrun6-software-sheet.html
@@ -1,7 +1,8 @@
+{{> "systems/shadowrun6-eden/templates/item/item-sheet-header.hbs" }}
+
 <form class="flexcol {{cssClass}}" autocomplete="off">
+    {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input type="text" value="{{item.name}}" data-field="name" /></h2>
-        <img src="{{item.img}}" data-edit="img" title="{{item.name}}" style="background-color: var(--highlight-color)"/>
             <table>
                 <tr>
                     <th>{{localize 'shadowrun6.item.type'}}</th>
